--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "mafia-host",
+  "name": "mafia-host-bot",
   "version": "1.0.0",
-  "description": "Mafia Host assistant - Replit starter",
+  "description": "Mafia Host assistant bot for Discord.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "register": "node register-commands.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5"
   }
 }
